--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -6,3 +6,5 @@ block content
       .col-xs-6.col-md-3
         a.thumbnail(href="#")
           img(src="#{product.url}")
+  script(src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js")
+  script(src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js")
