--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,3 +1,21 @@
 .right{
   float: right;
 }
+label[for="user_id"]{
+  margin-right: 20px;
+}
+#user_id{
+  display: inline-block;
+  width: 40%;
+}
+.user-list tr td:last-child{
+  width: 35%;
+}
+.form-wrapper{
+  display: none;
+  overflow: hidden;
+  transition: all 200ms;
+}
+.form-wrapper button{
+  margin-left: 20px;
+}
