--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -1,10 +1,14 @@
 extends ../layout
 
 block content
-  .row.container-fluid
-    each product in products
-      .col-xs-6.col-md-3
-        a.thumbnail(href="#")
-          img(src="#{product.url}")
+  .container-fluid
+    .row
+      each product in products
+        .col-xs-6.col-md-3
+          a.thumbnail(href="/details/#{product._id}")
+            img(src="#{product.url}")
+            .caption
+              p.name #{product.name}
+              p.price #{product.price}元
   script(src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js")
   script(src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js")
