shopping cart page

--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  .container-fluid
+  .container
     .row
       each product in products
         .col-xs-6.col-md-3
