--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     meta(charset="utf-8")
     title women's website
+    meta(name="viewport",content="width=device-width,initial-scale=1.0")
     link(rel="stylesheet",href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css")
     link(rel="stylesheet",href="/style/main.css")
   body
