--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
-  .container
+  .container.page
+    include ../includes/header
     .row
       each product in products
         .col-xs-6.col-md-3
