--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -4,10 +4,14 @@ html
     meta(charset="utf-8")
     title women's website
     meta(name="viewport",content="width=device-width,initial-scale=1.0")
-    link(rel="stylesheet",href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css")
+    link(rel="stylesheet",href="/style/sm.min.css")
+    link(rel="stylesheet",href="/style/global.css")
     link(rel="stylesheet",href="/style/main.css")
   body
-    include ./includes/header
-    block content
-    include ./module/login
-    include ./module/signup
+    .page-group
+      //- include ./includes/header
+      #screen_wrap.with-header
+        block content
+  script(type="text/javascript",src="/js/zepto.min.js")
+  script(type="text/javascript",src="/js/sm.min.js")
+  script(type="text/javascript",src="/js/action.js")
