--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,16 +2,14 @@ doctype
 html
   head
     meta(charset="utf-8")
-    title women's website
+    title SHOPIN
     meta(name="viewport",content="width=device-width,initial-scale=1.0")
     link(rel="stylesheet",href="/style/sm.min.css")
+    link(rel="stylesheet",href="/style/font-awesome.min.css")
     link(rel="stylesheet",href="/style/global.css")
-    link(rel="stylesheet",href="/style/main.css")
   body
     .page-group
-      //- include ./includes/header
-      #screen_wrap.with-header
-        block content
+      block content
   script(type="text/javascript",src="/js/zepto.min.js")
   script(type="text/javascript",src="/js/sm.min.js")
   script(type="text/javascript",src="/js/action.js")
