--- a/public/less/global.less
+++ b/public/less/global.less
@@ -3,4 +3,7 @@
 @import 'reset.less';
 
 @import 'global.less';
+@import 'public.less';
 @import 'header.less';
+@import 'home.less';
+@import 'list.less';
