--- a/public/less/reset.less
+++ b/public/less/reset.less
@@ -7,7 +7,6 @@
 // -------------------------
 body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,figure,
 fieldset,legend,input,textarea,p,blockquote,th,td,hr,button {margin: 0; padding: 0;}
-
 li {
   list-style: none;
 }
@@ -19,7 +18,7 @@ em {
 }
 
 a {
-  color: #588eda;
+  color: #5e5e5e;
   text-decoration: none;
 
   &:active {
