--- a/public/style/global.css
+++ b/public/style/global.css
@@ -38,7 +38,7 @@ em {
   font-style: normal;
 }
 a {
-  color: #588eda;
+  color: #5e5e5e;
   text-decoration: none;
 }
 a:active {
@@ -56,56 +56,258 @@ a:active {
 :-ms-input-placeholder {
   color: #C3C3C3;
 }
-header {
-  position: fixed;
-  width: 100%;
-  height: 2.25rem;
-  border-bottom: 1px solid #c9c7c8;
-  top: 0;
-  z-index: 999;
-  background: #fafafa;
+body {
+  background: #fff;
+  color: #5e5e5e;
 }
-header .subfield {
-  display: inline-block;
-  width: 2.5rem;
-  padding: 0 15px;
-  height: 100%;
+body.with-panel-right-reveal .page {
+  -webkit-transform: translate3d(-8rem, 0, 0);
+  transform: translate3d(-8rem, 0, 0);
+}
+.clearfix:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.lf {
   float: left;
 }
-header .subfield i {
-  background: rgba(0, 0, 0, 0) url("../images/icon/subfield_icon.png") no-repeat 0 0;
-  display: inline-block;
-  width: 1rem;
-  height: 100%;
-  -webkit-background-size: contain;
-  background-size: contain;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  background-position: center;
-}
-header .badget {
-  display: inline-block;
+.rt {
   float: right;
-  width: 2.5rem;
-  height: 100%;
-  text-align: center;
 }
-header .badget:after {
-  content: '';
-  background: rgba(0, 0, 0, 0) url("../images/icon/shoppingcart_icon.png") no-repeat 0 0;
+.content {
+  overflow-x: hidden;
+}
+header.bar.bar-nav {
+  height: 2.1rem;
+  padding: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
+header.bar.bar-nav .logo {
   display: inline-block;
-  width: 1.1rem;
-  height: 1.05rem;
-  -webkit-background-size: contain;
-  background-size: contain;
-  text-indent: 100%;
-  white-space: nowrap;
+  width: 3rem;
+  height: 2.1rem;
+  line-height: 2.1rem;
+  float: left;
+  color: #fff;
+  text-align: right;
   overflow: hidden;
+}
+header.bar.bar-nav .logo img {
+  width: 2.45rem;
+  height: auto;
   vertical-align: middle;
 }
-header form {
-  position: relative;
+header.bar.bar-nav .badget {
+  display: inline-block;
+  width: 2.4rem;
   height: 100%;
-  margin: 0 2.5rem;
+  font-size: 1rem;
+  line-height: 2.1rem;
+  float: right;
+  text-align: center;
+  color: #fff;
+}
+header.bar.bar-nav form {
+  position: absolute;
+  top: 0;
+  left: 3.5rem;
+  right: 2.45rem;
+  height: 100%;
+  line-height: 2.1rem;
+}
+header.bar.bar-nav form .search {
+  width: 10rem;
+  height: 1.45rem;
+  border-radius: 0.15rem;
+  padding: 0 0.5rem;
+  margin: 0 auto;
+  position: relative;
+  top: 0.35rem;
+  background: #fff;
+}
+header.bar.bar-nav form input {
+  display: inline-block;
+  border: none;
+  width: 100%;
+  height: 100%;
+  padding: 0.25rem 2.5rem 0.25rem 0;
+  background: transparent;
+  position: absolute;
+  top: 0;
+  font-size: 0.6rem;
+}
+header.bar.bar-nav form .search-btn {
+  display: inline-block;
+  width: 2.4rem;
+  height: 1.4rem;
+  border-top-right-radius: 0.15rem;
+  border-bottom-right-radius: 0.15rem;
+  line-height: 1.4rem;
+  background: #fff;
+  text-align: center;
+  vertical-align: middle;
+  border-left: 1px solid #ccc;
+  color: #ccc;
+  position: absolute;
+  right: 0;
+}
+.home.page.content {
+  margin-top: -2.1rem;
+  z-index: 1;
+}
+.activity {
+  display: block;
+  width: 100%;
+  height: 2.05rem;
+  overflow: hidden;
+}
+.activity img {
+  width: 100%;
+  height: auto;
+}
+.banner {
+  width: 100%;
+  min-height: 5rem;
+  background: #fff;
+  overflow: hidden;
+}
+.banner .swiper_wrap {
+  width: 960px;
+}
+.banner .swiper_wrap:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.banner .swiper_wrap:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.banner .wipe_img_con {
+  width: 320px;
+  float: left;
+  -moz-transition: all 3s linear 0s;
+  -webkit-transition: all 3s linear 0s;
+  -o-transition: all 3s linear 0s;
+  transition: all 3s linear 0s;
+}
+.banner .wipe_img_con img {
+  width: 100%;
+}
+.user-nav {
+  background: #fff;
+  margin-bottom: 0.65rem;
+}
+.user-nav .col-25 {
+  height: 3rem;
+  padding: 0 0.35rem;
+  font-size: 0.6rem;
+}
+.user-nav .col-25 img {
+  width: 1.8rem;
+  height: 1.8rem;
+  display: block;
+  margin: 0 auto;
+}
+.user-nav .col-25 p {
+  color: #555;
+  text-align: center;
+}
+.shopin-head {
+  text-align: center;
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+.shopin-head hr {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  z-index: -1;
+  border-top: 1px solid #e5e5e5;
+}
+.shopin-head span {
+  display: inline-block;
+  box-sizing: content-box;
+  padding: 0 0.2rem 0 1.2rem;
+  font-size: 0.625rem;
+  font-weight: normal;
+  color: #5e5e5e;
+  background: rgba(0, 0, 0, 0) url("../images/red_star.png") no-repeat 0 0;
+  background-color: #eee;
+  background-position: 0.2rem 0;
+  background-size: 0.9rem 0.9rem;
+}
+.subfield {
+  width: 8rem;
+  height: 100%;
+  background: #fff;
+}
+.subfield .subfield-wrap {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  color: #666;
+}
+.subfield .subfield-wrap .close-panel {
+  position: absolute;
+  top: 0.2rem;
+  left: 0.2rem;
+  display: inline-block;
+  width: 0.5rem;
+  height: 0.5rem;
+  text-align: center;
+  line-height: 0.5rem;
+}
+.subfield .subfield-wrap .subfield-cont {
+  margin: 2.4rem 0.4rem 0 0;
+}
+.wall .wal-list .wall-col {
+  width: 50%;
+  overflow: hidden;
+}
+.wall .wal-list .wall-col .wall-item {
+  width: 96%;
+  margin: 0 2% 2%;
+  border: 1px solid #ededed;
+  color: #bebebe;
+  font-size: 0.6rem;
+  background: #fff;
+}
+.wall .wal-list .wall-col .wall-item .img {
+  font-size: 0;
+}
+.wall .wal-list .wall-col .wall-item .img img {
+  width: 100%;
+}
+.wall .wal-list .wall-col .wall-item p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.wall .wal-list .wall-col .wall-item .priceattention {
+  height: 1rem;
+  padding: 0 2%;
+}
+.wall .wal-list .wall-col .wall-item .price {
+  display: inline-block;
+  color: #ee4566;
+}
+.wall .wal-list .wall-col .wall-item .attention {
+  line-height: 1rem;
+}
+.wall .wal-list .wall-col .wall-item .attention i {
+  margin: 0.2rem 0.2rem 0 0;
 }
