--- a/public/less/home.less
+++ b/public/less/home.less
@@ -1,7 +1,7 @@
-.home.page.content{
-  margin-top: -2.1rem;
-  z-index: 1;
+.content.wrapper{
+  top:0;
 }
+
 .activity{
   display: block;
   width: 100%;
