--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,4 +12,4 @@ html
       block content
   script(type="text/javascript",src="/js/zepto.min.js")
   script(type="text/javascript",src="/js/sm.min.js")
-  script(type="text/javascript",src="/js/action.js")
+  script(type="text/javascript",src="/js/main.js")
