--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   #subfield-panel.subfield.panel.panel-right.panel-reveal
-    .subfield-wrap.content-block
+    .subfield-wrap
       a.close-panel(href="javascript:;")
         i.fa.fa-close
       ul.subfield-cont
