--- a/public/less/home.less
+++ b/public/less/home.less
@@ -19,14 +19,16 @@
   min-height: 5rem;
   background: #fff;
   overflow: hidden;
+  font-size: 0;
   .swiper_wrap{
     width: 960px;
     .clearfix();
+    .transition(all,3s);
   }
   .wipe_img_con{
     width: 320px;
     float: left;
-    .transition(all,3s);
+    .transition();
     img{
       width: 100%;
     }
@@ -37,6 +39,7 @@
 .user-nav{
   background: #fff;
   margin-bottom: 0.65rem;
+  padding-top: 0.5rem;
   .col-25{
     height: 3rem;
     padding: 0 0.35rem;
@@ -84,19 +87,13 @@
 .subfield{
   width: 8rem;
   height: 100%;
-  // right: 0;
   background: #fff;
-  // &#subfield-panel.panel-right{
-  //   -webkit-transform: translate3d(-8rem,0,0);
-  //   transform: translate3d(-8rem,0,0);
-  // }
   .subfield-wrap{
     width: 100%;
     height: 100%;
     margin: 0;
     position: absolute;
     top: 0;
-    color: #666;
     .close-panel{
       position: absolute;
       top: 0.2rem;
@@ -106,9 +103,34 @@
       height: 0.5rem;
       text-align: center;
       line-height: 0.5rem;
+      color: #ccc;
     }
     .subfield-cont{
-      margin: 2.4rem 0.4rem 0 0;
+      margin: 1.5rem 0 0 0.4rem;
+      li{
+        display: inline-block;
+        float: left;
+        width: 3rem;
+      }
+      a{
+        color: #666;
+        font-size: 0.6rem;
+      }
+    }
+    .user-panel{
+      width: 100%;
+      height: 1.5rem;
+      line-height: 1.5rem;
+      margin-left: 0.5rem;
+      border-top: 1px solid #ccc;
+      padding-left: 0.5rem;
+      font-size: 0.6rem;
+      color: #ff6b9b;
+      position: absolute;
+      bottom: 0.5rem;
+      .fa-user{
+        margin-right: 0.1rem;
+      }
     }
   }
 }
