--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -31,6 +31,12 @@ block content
           .wipe_img_con
             a.swiper_wrap_a
               img(src="images/upload_ie4tcmbzmvrwmnjxhazdambqgqyde_750x250.jpg")
+          .wipe_img_con
+            a.swiper_wrap_a
+              img(src="images/upload_ie4tcmbzmvrwmnjxhazdambqgqyde_750x250.jpg")
+          .wipe_img_con
+            a.swiper_wrap_a
+              img(src="images/upload_ie4tcmbzmvrwmnjxhazdambqgqyde_750x250.jpg")
       .user-nav
         ul.row
           li.col-25
