--- a/public/less/home.less
+++ b/public/less/home.less
@@ -20,10 +20,13 @@
   background: #fff;
   overflow: hidden;
   font-size: 0;
+  position: relative;
   .swiper_wrap{
     width: 960px;
+    position: absolute;
+    left: 0;
+    top: 0;
     .clearfix();
-    .transition(all,3s);
   }
   .wipe_img_con{
     width: 320px;
