--- a/public/style/global.css
+++ b/public/style/global.css
@@ -174,13 +174,13 @@ header.bar.bar-nav form .search-btn {
   background: #fff;
   overflow: hidden;
   font-size: 0;
+  position: relative;
 }
 .banner .swiper_wrap {
   width: 960px;
-  -moz-transition: all 3s linear 0s;
-  -webkit-transition: all 3s linear 0s;
-  -o-transition: all 3s linear 0s;
-  transition: all 3s linear 0s;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .banner .swiper_wrap:after {
   content: " ";
