--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -4,8 +4,7 @@ html
     meta(charset="utf-8")
     title SHOPIN
     meta(name="viewport",content="width=device-width,initial-scale=1.0")
-    link(rel="stylesheet",href="/style/sm.min.css")
-    link(rel="stylesheet",href="/style/font-awesome.min.css")
+    link(rel="stylesheet",href="/style/bootstrap.min.css")
     link(rel="stylesheet",href="/style/global.css")
   body
     .page-group
