--- a/public/style/global.css
+++ b/public/style/global.css
@@ -59,6 +59,7 @@ a:active {
 body {
   background: #fff;
   color: #5e5e5e;
+  font: 400 0.7rem/1.5 Arial, sans-serif;
 }
 body.with-panel-right-reveal .page {
   -webkit-transform: translate3d(-8rem, 0, 0);
@@ -80,6 +81,47 @@ body.with-panel-right-reveal .page {
 }
 .content {
   overflow-x: hidden;
+}
+.slide-box {
+  width: 100%;
+  height: auto;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+}
+.slide-box .swiper_wrap {
+  width: 960px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 0;
+}
+.slide-box .swiper_wrap:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.slide-box .swiper_wrap:after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+.slide-box .wipe_img_con {
+  width: 320px;
+  float: left;
+  -moz-transition: all 0.3s linear 0s;
+  -webkit-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
+  transition: all 0.3s linear 0s;
+}
+.slide-box .wipe_img_con img {
+  width: 100%;
 }
 header.bar.bar-nav {
   height: 2.1rem;
@@ -168,80 +210,39 @@ header.bar.bar-nav form .search-btn {
   width: 100%;
   height: auto;
 }
-.banner {
-  width: 100%;
-  min-height: 5rem;
-  background: #fff;
-  overflow: hidden;
-  font-size: 0;
-  position: relative;
-}
-.banner .swiper_wrap {
-  width: 960px;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.banner .swiper_wrap:after {
-  content: " ";
-  display: block;
-  clear: both;
-  height: 0;
-  font-size: 0;
-  visibility: hidden;
-}
-.banner .swiper_wrap:after {
-  content: " ";
-  display: block;
-  clear: both;
-  height: 0;
-  font-size: 0;
-  visibility: hidden;
-}
-.banner .wipe_img_con {
-  width: 320px;
-  float: left;
-  -moz-transition: all 0.3s linear 0s;
-  -webkit-transition: all 0.3s linear 0s;
-  -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-}
-.banner .wipe_img_con img {
-  width: 100%;
-}
-.user-nav {
+.home .user-nav {
   background: #fff;
   margin-bottom: 0.65rem;
   padding-top: 0.5rem;
 }
-.user-nav .col-25 {
+.home .user-nav .col-25 {
   height: 3rem;
   padding: 0 0.35rem;
   font-size: 0.6rem;
 }
-.user-nav .col-25 img {
+.home .user-nav .col-25 img {
   width: 1.8rem;
   height: 1.8rem;
   display: block;
   margin: 0 auto;
 }
-.user-nav .col-25 p {
+.home .user-nav .col-25 p {
   color: #555;
   text-align: center;
 }
-.shopin-head {
+.home .shopin-head {
   text-align: center;
   margin-bottom: 0.5rem;
   position: relative;
 }
-.shopin-head hr {
+.home .shopin-head hr {
   width: 100%;
   position: absolute;
   top: 50%;
   z-index: -1;
   border-top: 1px solid #e5e5e5;
 }
-.shopin-head span {
+.home .shopin-head span {
   display: inline-block;
   box-sizing: content-box;
   padding: 0 0.2rem 0 1.2rem;
@@ -339,4 +340,262 @@ header.bar.bar-nav form .search-btn {
 }
 .wall .wal-list .wall-col .wall-item .attention i {
   margin: 0.2rem 0.2rem 0 0;
+}
+.detail .content {
+  padding-bottom: 42px;
+}
+.detail .content .detail-primary {
+  background: #fff;
+}
+.detail .content .detaile-slide .swiper-page {
+  position: absolute;
+  bottom: 0.4rem;
+  right: 0.6rem;
+  width: 2.025rem;
+  height: 0.85rem;
+  line-height: 0.85rem;
+  padding: 0 0.425rem;
+  border-radius: 0.425rem;
+  background: rgba(0, 0, 0, 0.3);
+  color: #fff;
+}
+.detail .content .break {
+  word-break: break-all;
+  word-wrap: break-word;
+}
+.detail .content .center {
+  text-align: center;
+}
+.detail .content .primary-info {
+  background: #fff;
+  border-bottom: 1px solid #eaeaea;
+}
+.detail .content .primary-info .info-title {
+  color: #424242;
+  margin-top: 0.65rem;
+  text-align: center;
+}
+.detail .content .primary-info .info-desc {
+  color: #999;
+  padding: 0 0.6rem;
+  text-align: center;
+  margin-top: 0.35rem;
+}
+.detail .content .primary-info .info-price {
+  margin-top: 0.25rem;
+}
+.detail .content .primary-info .info-price .now {
+  color: #000;
+  font-size: 0.95rem;
+}
+.detail .content .primary-info .info-price .market {
+  font-size: 0.6rem;
+  color: #999;
+  margin: 0.3rem 0 0 0.3rem;
+}
+.detail .content .primary-info .info-price .discount {
+  background: #f13e3a;
+  color: #fff;
+  font-size: 0.6rem;
+  padding: 0 0.2rem;
+  margin-left: 0.3rem;
+}
+.detail .content .primary-info .info-other {
+  margin: 0.85rem 0.65rem 0.65rem;
+}
+.detail .content .primary-info .info-other .item {
+  display: inline-block;
+  width: 4.1rem;
+  font-size: 0.6rem;
+  color: #999;
+}
+.detail .content .primary-info .info-other .item:first-child {
+  border-right: 1px solid #dbdbdb;
+}
+.detail .detail-rates {
+  background: #fff;
+  margin-top: 0.5rem;
+  padding: 0 0.6rem;
+  border-bottom: 1px solid #dedede;
+}
+.detail .detail-rates .rates-head {
+  border-bottom: 1px solid #dcdcdc;
+}
+.detail .detail-rates .rates-head a.title {
+  position: static;
+  color: #000;
+  font-size: 0.65rem;
+  text-align: left;
+  line-height: 1;
+  padding: 0.85rem 0 0.65rem;
+  margin: 0;
+}
+.detail .detail-rates .rates-head a.title .more {
+  float: right;
+  color: #666;
+  font-size: 0.6rem;
+}
+.detail .detail-rates .rates-head a.title .more .fa {
+  font-size: 0.7rem;
+  margin-left: 0.25rem;
+}
+.detail .detail-rates .rates-list .rate-item {
+  padding-top: 0.65rem;
+}
+.detail .detail-rates .rates-list .rate-item .avatar {
+  width: 2.46rem;
+  height: 2.46rem;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+.detail .detail-rates .rates-list .rate-item .name {
+  margin-left: 0.43rem;
+  color: #424242;
+}
+.detail .detail-rates .rates-list .rate-item .rate-cont {
+  color: #727272;
+  font-size: 0.65rem;
+  line-height: 1.1;
+  margin-top: 0.2rem;
+}
+.detail .detail-rates .rates-list .rate-item .time,
+.detail .detail-rates .rates-list .rate-item .sku {
+  font-size: 0.6rem;
+  color: #999;
+}
+.detail .detail-rates .rates-list .rate-item .sku {
+  margin-left: 0.3rem;
+}
+.detail .detail-rates .rates-list .rate-item .show-img .small-img {
+  float: left;
+  margin: 0 0.1rem 0.1rem 0;
+  width: 2.9rem;
+  height: 2.9rem;
+  overflow: hidden;
+}
+.detail .detail-rates .rates-list .rate-item .show-img .small-img img {
+  width: 100%;
+}
+.detail .detail-tabpanel {
+  background: #fff;
+  margin-top: 0.35rem;
+  border-top: 1px solid #dedede;
+}
+.detail .detail-tabpanel .buttons-row {
+  font-size: 0.65rem;
+  text-align: center;
+  background: #fff;
+  width: 100%;
+}
+.detail .detail-tabpanel .buttons-row a.col-50 {
+  color: #333;
+  display: inline-block;
+  padding: 0.4rem 0;
+  border-bottom: 1px solid transparent;
+}
+.detail .detail-tabpanel .buttons-row a.col-50.actve {
+  border-bottom: 1px solid #f13e3a;
+}
+.detail .detail-tabpanel .buttons-row a.col-50 span {
+  display: inline-block;
+  width: 100%;
+  border-right: 1px solid #e5e5e5;
+}
+.detail .detail-tabpanel .buttons-row a.col-50:nth-child(2n) span {
+  border: none;
+}
+.detail .detail-tabpanel .tabs {
+  overflow-x: hidden;
+}
+.detail .detail-tabpanel .graphic {
+  padding: 0 0.25rem;
+}
+.detail .detail-tabpanel .graphic .pic-title {
+  font-size: 0.62rem;
+  color: #333;
+  margin: 0.5rem 0;
+}
+.detail .detail-tabpanel .graphic .pic-list {
+  overflow-x: hidden;
+}
+.detail .detail-tabpanel .graphic .pic-list img {
+  width: 100%;
+}
+.detail .detail-tabpanel .parameters {
+  padding: 0 0.5rem;
+}
+.detail .detail-tabpanel .parameters table {
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+}
+.detail .detail-tabpanel .parameters table tr {
+  border-bottom: 1px solid #f4f4f4;
+  color: #727272;
+}
+.detail .detail-tabpanel .parameters table td {
+  line-height: 1.9rem;
+  text-align: left;
+}
+.detail .detail-tabpanel .parameters table .param-name {
+  width: 5rem;
+}
+.detail .detail-tabpanel .parameters table .param-info {
+  color: #eb4868;
+}
+.detail .detail-footbar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 0;
+  width: 100%;
+  height: 42px;
+  border: 1px solid #dcdcdc;
+  background: #fff;
+  overflow: hidden;
+}
+.detail .detail-footbar .footer-fav,
+.detail .detail-footbar .footer-cart {
+  display: inline-block;
+  width: 2.9rem;
+  height: 2.1rem;
+  text-align: center;
+}
+.detail .detail-footbar .footer-fav .text,
+.detail .detail-footbar .footer-cart .text {
+  display: block;
+  line-height: 0.8;
+  font-size: 0.6rem;
+  margin-top: 0.1rem;
+}
+.detail .detail-footbar .footer-fav .fa,
+.detail .detail-footbar .footer-cart .fa {
+  font-size: 0.9rem;
+  margin-top: 0.2rem;
+}
+.detail .detail-footbar .footer-fav {
+  border-right: 1px solid #dcdcdc;
+}
+.detail .detail-footbar .footer-buy {
+  display: inline-block;
+  height: 2.1rem;
+  float: right;
+  margin-right: 0.5rem;
+}
+.detail .detail-footbar .footer-buy span {
+  display: inline-block;
+  font-size: 0.6rem;
+  width: 4.1rem;
+  height: 1.35rem;
+  line-height: 1.35rem;
+  text-align: center;
+  margin: 0.3rem 0 0 0.5rem;
+}
+.detail .detail-footbar .footer-buy .buy-cart {
+  color: #ec312d;
+  border: 1px solid #ec312d;
+}
+.detail .detail-footbar .footer-buy .buy-now {
+  color: #fff;
+  background: #ec312d;
 }
