admin login&signup pages

--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -5,9 +5,9 @@ html
     title SHOPIN
     meta(name="viewport",content="width=device-width,initial-scale=1.0")
     link(rel="stylesheet",href="/style/bootstrap.min.css")
-    link(rel="stylesheet",href="/style/global.css")
+    link(rel="stylesheet",href="/style/font-awesome.min.css")
+    link(rel="stylesheet",href="/style/admin.css")
   body
-    .page-group
-      block content
-    include ./includes/footer
+    block content
+    include ./includes/admin-footer
     block scripts
