try to password

--- a/app/views/pages/admin/login.jade
+++ b/app/views/pages/admin/login.jade
@@ -37,4 +37,6 @@ block scripts
         $('.login-wrap').removeClass('rotate');
         $('.signup-wrap').addClass('rotate');
       });
+
+      //- validate
     })
