--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -9,14 +9,20 @@ html
     link(rel="stylesheet",href="/style/admin.css")
   body
     header
-      .title
-        .logo SHOPIN
-        span.name 后台管理系统
-      .user
-        a.username(href="javascrip:;") 123@123.com
-        a.logout(href="#") 注销
+      .inner
+        .title
+          .logo SHOPIN
+          span.name 后台管理系统
+        .user
+          a.username(href="javascrip:;") 123@123.com
+          a.logout(href="#") 退出
     .container
       .sidebar
+        ul.nav
+          li
+            a(href="/admin/productlist") 商品管理
+          li
+            a(href="/admin/userlist") 用户列表
       .main
         block content
     include ./includes/admin-footer
