--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -62,23 +62,27 @@ body {
   height: 100%;
 }
 body {
-  background-color: #eee;
+  background-color: #eceff2;
 }
 header {
   width: 100%;
-  height: 60px;
+  height: 70px;
   line-height: 60px;
   background: #fff;
   padding: 0 20px;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #d9dadc;
   margin-bottom: 20px;
+}
+header .inner {
+  width: 1170px;
+  margin: 0 auto;
 }
 header .title {
   display: inline-block;
 }
 header .title .logo {
   display: inline-block;
-  font-size: 42px;
+  font-size: 36px;
   color: #d06868;
   font-weight: bold;
 }
@@ -86,6 +90,7 @@ header .title .name {
   font-size: 16px;
   color: #262525;
   font-weight: bold;
+  margin-left: 8px;
 }
 header .user {
   display: inline-block;
@@ -105,7 +110,9 @@ header .user .logout:hover {
   text-decoration: underline;
 }
 .container {
-  width: 1250px;
+  width: 1170px;
+  border: 1px solid #e5e5e5;
+  padding: 0;
 }
 .container:after {
   content: " ";
@@ -116,11 +123,35 @@ header .user .logout:hover {
   visibility: hidden;
 }
 .container .sidebar {
-  width: 150px;
+  width: 210px;
   background: #fff;
   height: 600px;
   float: left;
   border-right: 1px solid #e5e5e5;
+}
+.container .sidebar .nav {
+  margin-top: 35px;
+}
+.container .sidebar .nav li {
+  width: 100%;
+  height: 38px;
+}
+.container .sidebar .nav li.active {
+  border-left: 4px solid #4285f4;
+  cursor: pointer;
+}
+.container .sidebar .nav li.active a {
+  background: #fafbfc;
+  color: #4285f4;
+}
+.container .sidebar .nav li a {
+  border-radius: 0;
+  text-indent: 20px;
+  margin: 0;
+  color: #5a626d;
+}
+.container .sidebar .nav li a:hover {
+  background: #fff;
 }
 .container .main {
   background: #fff;
